# pyDBow3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
src/: dbow3_wrapper.cpp
tests/: test_wrap.ipynb
